--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
 <body class="side-header" data-bs-spy="scroll" data-bs-target="#header-nav" data-bs-offset="1">
 
 <!-- Preloader -->
-<div class="preloader preloader-dark">
-  <div class="lds-ellipsis">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</div>
+
 <!-- Preloader End --> 
 
 <!-- Document Wrapper   
@@ -54,7 +47,7 @@
       <div class="container-fluid position-relative h-100 flex-lg-column ps-3 px-lg-3 pt-lg-3 pb-lg-2"> 
         
         <!-- Logo --> 
-        <a href="index-video-youtube-dark.html" class="mb-lg-auto mt-lg-4">
+        <a href="https://rodripertuso.github.io/nuestra-relacion/" class="mb-lg-auto mt-lg-4">
 			<span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block">
 				<img class="img-fluid rounded-pill d-block" src="images/profile.jpg" title="I'm Simone" alt="">
 			</span>
